force-app/main/default/objects/EC_UserRegistration_Custom_Code__mdt/EC_UserRegistration_Custom_Code__mdt.object-meta.xml
<CustomObject>
    <description>US:76262:Raghav:This holds the mapping for Custom Codes and associated labels for Mulesoft integeration with salesforce for User Registration.</description>
    <label>EC_UserRegistration_Custom_Code</label>
    <pluralLabel>EC_UserRegistration_Custom_Codes</pluralLabel>
</CustomObject>