force-app/main/default/objects/EC_UserRegistration_Custom_Code__mdt/fields/EC_CustomCodes__c.field-meta.xml
<CustomField>
    <fullName>EC_CustomCodes__c</fullName>
    <description>US:76262:Raghav:This field holds the Custom Code.</description>
    <label>EC_CustomCodes</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>