force-app/main/default/objects/EC_UserRegistration_Custom_Code__mdt/fields/EC_Message__c.field-meta.xml
<CustomField>
    <fullName>EC_Message__c</fullName>
    <description>US:76262:Raghav:This field holds the message for customcode</description>
    <label>EC_Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>