force-app/main/default/objects/EC_UserRegistration_Custom_Code__mdt/fields/EC_Popup_Label__c.field-meta.xml
<CustomField>
    <fullName>EC_Popup_Label__c</fullName>
    <description>US:76262:Raghav:This field holds the popup label used on UI.</description>
    <label>EC_Popup Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>